updating tb css to make sure social sharing logos are hidden on tablet

--- a/packages/web/src/styles/tb.css
+++ b/packages/web/src/styles/tb.css
@@ -22,6 +22,184 @@
     display: none !important
 }
 
+@media screen and (max-width:39.9375em) {
+    .hide-for-small-only {
+        display: none !important
+    }
+}
+
+@media screen and (max-width:0em),
+screen and (min-width:40em) {
+    .show-for-small-only {
+        display: none !important
+    }
+}
+
+@media print,
+screen and (min-width:40em) {
+    .hide-for-medium {
+        display: none !important
+    }
+}
+
+@media screen and (max-width:39.9375em) {
+    .show-for-medium {
+        display: none !important
+    }
+}
+
+@media screen and (min-width:40em) and (max-width:61.9375em) {
+    .hide-for-medium-only {
+        display: none !important
+    }
+}
+
+@media screen and (max-width:39.9375em),
+screen and (min-width:62em) {
+    .show-for-medium-only {
+        display: none !important
+    }
+}
+
+@media print,
+screen and (min-width:62em) {
+    .hide-for-large {
+        display: none !important
+    }
+}
+
+@media screen and (max-width:61.9375em) {
+    .show-for-large {
+        display: none !important
+    }
+}
+
+@media screen and (min-width:62em) and (max-width:74.9375em) {
+    .hide-for-large-only {
+        display: none !important
+    }
+}
+
+@media screen and (max-width:61.9375em),
+screen and (min-width:75em) {
+    .show-for-large-only {
+        display: none !important
+    }
+}
+
+@media screen and (min-width:75em) {
+    .hide-for-xlarge {
+        display: none !important
+    }
+}
+
+@media screen and (max-width:74.9375em) {
+    .show-for-xlarge {
+        display: none !important
+    }
+}
+
+@media screen and (min-width:75em) and (max-width:83.1875em) {
+    .hide-for-xlarge-only {
+        display: none !important
+    }
+}
+
+@media screen and (max-width:74.9375em),
+screen and (min-width:83.25em) {
+    .show-for-xlarge-only {
+        display: none !important
+    }
+}
+
+@media screen and (min-width:83.25em) {
+    .hide-for-xxlarge {
+        display: none !important
+    }
+}
+
+@media screen and (max-width:83.1875em) {
+    .show-for-xxlarge {
+        display: none !important
+    }
+}
+
+@media screen and (min-width:83.25em) {
+    .hide-for-xxlarge-only {
+        display: none !important
+    }
+}
+
+@media screen and (max-width:83.1875em) {
+    .show-for-xxlarge-only {
+        display: none !important
+    }
+}
+
+.show-for-sr,
+.show-on-focus {
+    position: absolute !important;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    white-space: nowrap;
+    -webkit-clip-path: inset(50%);
+    clip-path: inset(50%);
+    border: 0
+}
+
+.show-on-focus:active,
+.show-on-focus:focus {
+    position: static !important;
+    width: auto;
+    height: auto;
+    overflow: visible;
+    clip: auto;
+    white-space: normal;
+    -webkit-clip-path: none;
+    clip-path: none
+}
+
+.hide-for-portrait,
+.show-for-landscape {
+    display: block !important
+}
+
+@media screen and (orientation:landscape) {
+    .hide-for-portrait,
+    .show-for-landscape {
+        display: block !important
+    }
+}
+
+@media screen and (orientation:portrait) {
+    .hide-for-portrait,
+    .show-for-landscape {
+        display: none !important
+    }
+}
+
+.hide-for-landscape,
+.show-for-portrait {
+    display: none !important
+}
+
+@media screen and (orientation:landscape) {
+    .hide-for-landscape,
+    .show-for-portrait {
+        display: none !important
+    }
+}
+
+@media screen and (orientation:portrait) {
+    .hide-for-landscape,
+    .show-for-portrait {
+        display: block !important
+    }
+}
+
 .row {
     max-width: 87.5rem;
     margin-right: auto;
